Standardize ports in authorizer and directory config

--- a/aserto/charts/aserto-directory/templates/config-secret.yaml
+++ b/aserto/charts/aserto-directory/templates/config-secret.yaml
@@ -14,13 +14,18 @@ stringData:
 
     api:
       grpc:
+        listen_address: 0.0.0.0:8282
         connection_timeout_seconds: 2
       gateway:
+        listen_address: 0.0.0.0:8383
         allowed_origins:
         - https://*.aserto.com
         - https://*aserto-console.netlify.app
         - https://*aserto.netlify.app
+      health:
+        listen_address: 0.0.0.0:8484
       metrics:
+        listen_address: 0.0.0.0:8585
         zpages: true
         grpc:
           counters: true
