proxy to connect browser to directory endpoint

--- a/aserto/charts/aserto-console/templates/service.yaml
+++ b/aserto/charts/aserto-console/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: aserto-console
   #namespace:  'aserto-console'
   labels:
-    {{- include "aserto-authorizer.labels" . | nindent 4 }}
+    {{- include "aserto-console.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
