configure directory api_key for authorizer

--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -20,7 +20,7 @@ stringData:
       directory_service:
         remote:
           address: {{ .Release.Name }}-directory:8282
-          api_key:
+          api_key: {{ .Values.global.directory.rootKey }}
           tenant_id: "{{ .Values.global.sidecar.tenantId }}"
 
       api:
