--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -48,14 +48,10 @@ stringData:
               url: https://ghcr.io
               type: "oci"
               response_header_timeout_seconds: 5
-              credentials:
-                bearer:
-                  token: "{{ .Values.global.sidecar.ghcrToken }}"
-                  scheme: "basic"
           bundles:
             {{ .Values.global.sidecar.policyName }}:
               service: ghcr
-              resource: "ghcr.io/aserto-dev/{{ .Values.global.sidecar.policyName }}:{{ .Values.global.sidecar.policyTag }}"
+              resource: "{{ .Values.global.sidecar.policyImage }}:{{ .Values.global.sidecar.policyTag }}"
               persist: false
               config:
                 polling:
