--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -19,7 +19,7 @@ stringData:
 
       directory_service:
         remote:
-          address: {{ .Release.Name }}-directory:8282
+          address: aserto-directory:8282
           api_key: {{ .Values.global.directory.rootKey }}
           tenant_id: "{{ .Values.global.sidecar.tenantId }}"
 
