fix directory service config in authorizer

--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -22,6 +22,7 @@ stringData:
           address: aserto-directory:8282
           api_key: {{ .Values.global.directory.rootKey }}
           tenant_id: "{{ .Values.global.sidecar.tenantId }}"
+          insecure: true
 
       api:
         gateway:
