add sidecar auth configuration

--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -24,6 +24,14 @@ stringData:
           tenant_id: "{{ .Values.global.sidecar.tenantId }}"
           insecure: true
 
+      auth:
+        options:
+          default:
+            enable_api_key: true
+            enable_anonymous: false
+        api_keys:
+          "console": "{{ .Values.global.sidecar.rootKey }}"
+
       api:
         gateway:
           listen_address: "0.0.0.0:8383"
