fix sidecar authentication

--- a/aserto/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/aserto/charts/aserto-authorizer/templates/config-secret.yaml
@@ -30,7 +30,7 @@ stringData:
             enable_api_key: true
             enable_anonymous: false
         api_keys:
-          "console": "{{ .Values.global.sidecar.rootKey }}"
+          "{{ .Values.global.sidecar.rootKey }}": "console"
 
       api:
         gateway:
