--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Read Configuration
-        uses: hashicorp/vault-action@v2.5.0
-        id: vault
-        with:
-          url: https://vault.eng.aserto.com/
-          token: ${{ secrets.VAULT_TOKEN }}
-          secrets: |
-            kv/data/github  "READ_WRITE_TOKEN"    | GITHUB_TOKEN;
-
       - name: Configure Git
         run: |
-          git config --global url."git@github.com:".insteadOf https://github.com/
           git config --global user.email "github-bot@aserto.com"
           git config --global user.name "Aserto Bot"
 
@@ -38,4 +28,4 @@ jobs:
           charts_dir: charts
           charts_repo_url: https://charts.aserto.com
         env:
-          CR_TOKEN: "${{ env.GITHUB_TOKEN }}"
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
