--- a/charts/self-hosted/charts/console-proxy/templates/deployment.yaml
+++ b/charts/self-hosted/charts/console-proxy/templates/deployment.yaml
@@ -2,22 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "proxy.fullname" . }}
-  #namespace: 'proxy'
+  name: {{ include "console-proxy.fullname" . }}
   labels:
-    {{- include "proxy.labels" . | nindent 4 }}
+    {{- include "console-proxy.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: proxy
+      app.kubernetes.io/name: console-proxy
   template:
     metadata:
       labels:
-        {{- include "proxy.labels" . | nindent 8 }}
+        {{- include "console-proxy.labels" . | nindent 8 }}
     spec:
       containers:
-        - name: proxy
+        - name: console-proxy
           image: nginx:latest
           readinessProbe:
             tcpSocket:
