--- a/charts/self-hosted/charts/console-proxy/templates/service.yaml
+++ b/charts/self-hosted/charts/console-proxy/templates/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: proxy
+  name: console-proxy
   #namespace:  'proxy'
   labels:
-    {{- include "proxy.labels" . | nindent 4 }}
+    {{- include "console-proxy.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: proxy
+    app.kubernetes.io/name: console-proxy
   ports:
     - name: http
       port: 8080
