flag to disable postgres / ensure we can support multiple releases and namespaces

--- a/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
@@ -3,8 +3,9 @@ apiVersion: v1
 type: opaque
 kind: Secret
 metadata:
-  name: authorizer-secret
-  #namespace: aserto-authorizer
+  name: {{ include "aserto-authorizer.fullname" . }}-secret
+  labels:
+    {{- include "aserto-authorizer.labels" . | nindent 4 }}
 stringData:
   config.yaml: |
     ---
@@ -19,7 +20,7 @@ stringData:
 
       directory_service:
         remote:
-          address: aserto-directory:8282
+          address: {{ .Release.Name}}-aserto-directory:8282
           api_key: {{ .Values.global.directory.rootKey }}
           tenant_id: "{{ .Values.global.sidecar.tenantId }}"
           insecure: true
