--- a/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
@@ -3,8 +3,9 @@ apiVersion: v1
 type: opaque
 kind: Secret
 metadata:
-  name: directory-secret
-  #namespace: 'aserto-directory'
+  name: {{ include "aserto-directory.fullname" . }}-secret
+  labels:
+    {{- include "aserto-directory.labels" . | nindent 4 }}
 stringData:
   config.yaml: |
     ---
@@ -33,9 +34,9 @@ stringData:
           gateway: true
 
     db:
-        host: "{{ .Release.Name }}-postgresql"
+        host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
-        user: postgres
+        user: {{ .Values.global.postgresql.auth.postgresUser }}
         password: {{ .Values.global.postgresql.auth.postgresPassword }}
         ssl_mode: disable
         db_name: {{ .Values.global.postgresql.auth.database }}
