--- a/charts/self-hosted/charts/aserto-authorizer/templates/service.yaml
+++ b/charts/self-hosted/charts/aserto-authorizer/templates/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: aserto-authorizer
-  #namespace:  'aserto-authorizer'
+  name: {{ include "aserto-authorizer.fullname" . }}
   labels:
     {{- include "aserto-authorizer.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: aserto-authorizer
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - name: https
       port: 8383
