--- a/charts/self-hosted/charts/aserto-console/templates/service.yaml
+++ b/charts/self-hosted/charts/aserto-console/templates/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: aserto-console
-  #namespace:  'aserto-console'
+  name: {{ include "aserto-console.fullname" . }}
   labels:
     {{- include "aserto-console.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: aserto-console
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - name: http
       port: 8080
