--- a/charts/self-hosted/charts/console-proxy/templates/service.yaml
+++ b/charts/self-hosted/charts/console-proxy/templates/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: console-proxy
-  #namespace:  'proxy'
+  name: {{ include "console-proxy.fullname" . }}
   labels:
     {{- include "console-proxy.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: console-proxy
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - name: http
       port: 8080
