fix helm install workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
           git config --global user.name "Aserto Bot"
 
       - name: Install Helm
+        with:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         uses: azure/setup-helm@v3
 
       - name: Configure dependencies
