--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,10 @@ jobs:
           token: "${{ secrets.GITHUB_TOKEN }}"
         uses: azure/setup-helm@v3
 
-      - name: Configure dependencies
+      - name: Refresh dependencies
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
+          cd charts/self-hosted && helm dependency update
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
