--- a/charts/self-hosted/values.yaml
+++ b/charts/self-hosted/values.yaml
@@ -5,7 +5,7 @@
 global:
 
   sidecar:
-    version: 0.20.12
+    version: latest
     tenantId: 07f3e43c-a734-11ed-a7a0-002270b772a6
     policyName: policy-todo
     policyImage: ghcr.io/aserto-policies/policy-todo
