workaround to create tenant reader role

--- a/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
@@ -7,6 +7,10 @@ metadata:
   labels:
     {{- include "aserto-directory.labels" . | nindent 4 }}
 stringData:
+  initPGHOST: {{ tpl (.Values.global.postgresql.auth.postgresHost) . }}
+  initPGDATABASE: {{ .Values.global.postgresql.auth.database }}
+  initPGUSER: {{ .Values.global.postgresql.auth.postgresUser }}
+  initPGPASSWORD: {{ .Values.global.postgresql.auth.postgresPassword }}
   config.yaml: |
     ---
     logging:
@@ -34,9 +38,21 @@ stringData:
           gateway: true
 
     db:
+      writer:
         host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
         user: {{ .Values.global.postgresql.auth.postgresUser }}
+        password: {{ .Values.global.postgresql.auth.postgresPassword }}
+        ssl_mode: disable
+        db_name: {{ .Values.global.postgresql.auth.database }}
+        debug_mode: false
+        max_open_conns: 25
+        max_idle_conns: 25
+        conn_max_lifetime: 5
+      reader:
+        host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
+        port: 5432
+        user: tenant_reader
         password: {{ .Values.global.postgresql.auth.postgresPassword }}
         ssl_mode: disable
         db_name: {{ .Values.global.postgresql.auth.database }}
