switch authorizer to topaz

--- a/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-authorizer/templates/config-secret.yaml
@@ -9,61 +9,68 @@ metadata:
 stringData:
   config.yaml: |
     ---
-    tenant_id: "{{ .Values.global.sidecar.tenantId }}"
-    policy_name: "{{ .Values.global.sidecar.policyName }}"
-    instance_label: "{{ .Values.global.sidecar.policyTag }}"
+    # config schema version
+    version: 1
 
-    authorizer:
-      logging:
-        prod: true
-        log_level: info
+    logging:
+      prod: true
+      log_level: info
 
-      directory_service:
-        remote:
-          address: {{ .Release.Name}}-aserto-directory:8282
-          api_key: {{ .Values.global.directory.rootKey }}
-          tenant_id: "{{ .Values.global.sidecar.tenantId }}"
-          insecure: true
+    directory:
+      db_path: $HOME/directory.db
 
-      auth:
-        options:
-          default:
-            enable_api_key: true
-            enable_anonymous: false
-        api_keys:
-          "{{ .Values.global.sidecar.rootKey }}": "console"
+    # remote directory is used to resolve the identity for the authorizer.
+    remote_directory:
+      address: {{ .Release.Name}}-aserto-directory:8282
+      api_key: {{ .Values.global.directory.rootKey }}
+      tenant_id: "{{ .Values.global.topaz.tenantId }}"
+      insecure: true
 
-      api:
+    # default jwt validation configuration
+    jwt:
+      acceptable_time_skew_seconds: 5 # set as default, 5 secs
+
+    api:
+      authorizer:
+        grpc:
+          connection_timeout_seconds: 2
+          listen_address: "0.0.0.0:8282"
         gateway:
           listen_address: "0.0.0.0:8383"
           allowed_origins:
+            - http://localhost
+            - http://localhost:*
+            - https://localhost
+            - https://localhost:*
             - https://*.aserto.com
             - https://*aserto-console.netlify.app
-            - https://*aserto-playground.netlify.app
-        grpc:
-          listen_address: "0.0.0.0:8282"
-          connection_timeout_seconds: 2
+          http: false
+          read_timeout: 2s
+          read_header_timeout: 2s
+          write_timeout: 2s
+          idle_timeout: 30s
         health:
           listen_address: "0.0.0.0:8484"
 
-      opa:
-        instance_id: "{{ .Values.global.sidecar.tenantId }}"
-        graceful_shutdown_period_seconds: 2
-        local_bundles:
-          paths: []
-          skip_verification: true
-        config:
-          services:
-            ghcr:
-              url: https://ghcr.io
-              type: "oci"
-              response_header_timeout_seconds: 5
-          bundles:
-            {{ .Values.global.sidecar.policyName }}:
-              service: ghcr
-              resource: "{{ .Values.global.sidecar.policyImage }}:{{ .Values.global.sidecar.policyTag }}"
-              persist: false
-              config:
-                polling:
-                  min_delay_seconds: 60
-                  max_delay_seconds: 120
+    opa:
+      instance_id: "{{ .Values.global.topaz.tenantId }}"
+      graceful_shutdown_period_seconds: 2
+      # max_plugin_wait_time_seconds: 30 set as default
+      local_bundles:
+        paths: []
+        skip_verification: true
+      config:
+        services:
+          ghcr:
+            url: https://ghcr.io
+            type: "oci"
+            response_header_timeout_seconds: 5
+        bundles:
+          todo:
+            service: ghcr
+            resource: "{{ .Values.global.topaz.policyImage }}:{{ .Values.global.topaz.policyTag }}"
+            persist: false
+            config:
+              polling:
+                min_delay_seconds: 60
+                max_delay_seconds: 120
