--- a/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/config-secret.yaml
@@ -10,7 +10,6 @@ stringData:
   initPGHOST: {{ tpl (.Values.global.postgresql.auth.postgresHost) . }}
   initPGDATABASE: {{ .Values.global.postgresql.auth.database }}
   initPGUSER: {{ .Values.global.postgresql.auth.postgresUser }}
-  initPGPASSWORD: {{ .Values.global.postgresql.auth.postgresPassword }}
   config.yaml: |
     ---
     logging:
@@ -42,7 +41,7 @@ stringData:
         host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
         user: {{ .Values.global.postgresql.auth.postgresUser }}
-        password: {{ .Values.global.postgresql.auth.postgresPassword }}
+        password: "${DIRECTORY_DB_WRITER_PASSWORD}"
         ssl_mode: disable
         db_name: {{ .Values.global.postgresql.auth.database }}
         debug_mode: false
@@ -53,7 +52,7 @@ stringData:
         host: "{{ tpl (.Values.global.postgresql.auth.postgresHost) . }}"
         port: 5432
         user: tenant_reader
-        password: {{ .Values.global.postgresql.auth.postgresPassword }}
+        password: "${DIRECTORY_DB_READER_PASSWORD}"
         ssl_mode: disable
         db_name: {{ .Values.global.postgresql.auth.database }}
         debug_mode: false
