Apply suggestions from code review
Co-authored-by: Julian Aichholz <39018167+rusty-jules@users.noreply.github.com>

--- a/charts/self-hosted/values.yaml
+++ b/charts/self-hosted/values.yaml
@@ -20,6 +20,8 @@ global:
     localServerEnabled: true
     existingSecret: "{{ .Release.Name }}-postgresql"
     auth:
+      secretKeys:
+        adminPasswordKey: postgres-password
       postgresHost: "{{ .Release.Name }}-postgresql"
       postgresUser: postgres
       postgresPassword: directory
