--- a/charts/self-hosted/charts/aserto-directory/templates/deployment.yaml
+++ b/charts/self-hosted/charts/aserto-directory/templates/deployment.yaml
@@ -74,7 +74,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: "{{ tpl (.Values.global.postgresql.existingSecret) . }}"
-                  key: postgres-password
+                  key: "{{ .Values.global.postgresql.secretKeys.adminPasswordKey }}"
           readinessProbe:
             tcpSocket:
               port: 8383
