--- a/charts/self-hosted/values.yaml
+++ b/charts/self-hosted/values.yaml
@@ -13,11 +13,14 @@ global:
     rootKey: 997ec52a856f0911442d1fccc308a408
 
   directory:
-    version: 0.21.13
+    version: 0.21.15
     rootKey: c96fe48da0735cf77fdba50134f52c43
 
   postgresql:
     localServerEnabled: true
+    existingSecret: "{{ .Release.Name }}-postgresql"
+    secretKeys:
+      adminPasswordKey: postgres-password
     auth:
       postgresHost: "{{ .Release.Name }}-postgresql"
       postgresUser: postgres
